--- a/login/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/login/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,12 +1,12 @@
 <main>
     <section class="form-section">
-        <img src="/assets/svg/logo.svg"/>
+        <img src="assets/svg/logo.svg"/>
        <h2>{{ title }}</h2>
        <ng-content></ng-content>
        <div class="btn-wrapper">
             <button 
                 class="btn-primary" 
-                
+                (click)="submit()"
                 [disabled]="disablePrimaryBtn"
             >
                 {{ primaryBtnText }}
@@ -16,11 +16,11 @@
                 <span>or</span>
                 <div></div>
             </div>
-            <button class="btn-secondary">{{ secondaryBtnText }}</button>
+            <button class="btn-secondary" (click)="navigate()">{{ secondaryBtnText }}</button>
        </div>
     </section>
     <section class="main-section">
         <h1>You Should, MoveIt!</h1>
-        <img src="/assets/svg/main-illustration.svg"/>
+        <img src="assets/svg/main-illustration.svg"/>
     </section>
 </main>
