feat(ui): update login screen with new SwiftBoard branding

--- a/login/src/app/components/default-login-layout/default-login-layout.component.html
+++ b/login/src/app/components/default-login-layout/default-login-layout.component.html
@@ -1,6 +1,6 @@
 <main>
     <section class="form-section">
-        <img src="assets/svg/logo.svg"/>
+        <img src="assets/png/logo.png"/>
        <h2>{{ title }}</h2>
        <ng-content></ng-content>
        <div class="btn-wrapper">
@@ -20,7 +20,7 @@
        </div>
     </section>
     <section class="main-section">
-        <h1>You Should, MoveIt!</h1>
-        <img src="assets/svg/main-illustration.svg"/>
+        <img src="assets/png/main-illustration.png"/>
+        <h1>Move faster, ride smarter – SwiftBoard.</h1>
     </section>
 </main>
