--- a/login/src/app/components/default-login-layout/default-login-layout.component.scss
+++ b/login/src/app/components/default-login-layout/default-login-layout.component.scss
@@ -27,6 +27,9 @@ main {
         padding: 0 35px;
 
         img {
+            width: 100%;
+            max-width: 300px;
+            height: auto;
             margin-bottom: 30px;
         }
 
