--- a/login/src/styles/variables.scss
+++ b/login/src/styles/variables.scss
@@ -1,5 +1,5 @@
-$primary-color: #7001FD;
-$text-color: #555555;
-$secondary-color: #1E2772;
+$primary-color: #1FB6FF;
+$text-color: #2F2F2F;
+$secondary-color: #136F8A;
 $gray-bg: #EEEEEE;
 $gray-secondary-bg: #F1F3F6;
