--- a/login/src/app/components/primary-input/primary-input.component.scss
+++ b/login/src/app/components/primary-input/primary-input.component.scss
@@ -16,7 +16,7 @@
         
         .icon {
             padding: 12px;
-            background-color: v.$primary-color;
+            background-color: v.$secondary-color;
             border-radius: 0 8px 8px 0;
 
             img {
